--- a/layout.css
+++ b/layout.css
@@ -20014,8 +20014,8 @@ a.text-gray-dark:focus,a.text-gray-dark:hover {
     font-style: normal;
     font-weight: normal;
     font-display: auto;
-    src: url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-brands-400.eot);
-    src: url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-brands-400.eot?#iefix) format("embedded-opentype"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-brands-400.woff2) format("woff2"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-brands-400.woff) format("woff"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-brands-400.ttf) format("truetype"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-brands-400.svg#fontawesome) format("svg")
+    src: url(../fonts/fa-brands-400.eot);
+    src: url(../fonts/fa-brands-400.eot?#iefix) format("embedded-opentype"),url(../fonts/fa-brands-400.woff2) format("woff2"),url(../fonts/fa-brands-400.woff) format("woff"),url(../fonts/fa-brands-400.ttf) format("truetype"),url(../fonts/fa-brands-400.svg#fontawesome) format("svg")
 }
 
 .fab {
@@ -20027,8 +20027,8 @@ a.text-gray-dark:focus,a.text-gray-dark:hover {
     font-style: normal;
     font-weight: 900;
     font-display: auto;
-    src: url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-duotone-900.eot);
-    src: url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-duotone-900.eot?#iefix) format("embedded-opentype"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-duotone-900.woff2) format("woff2"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-duotone-900.woff) format("woff"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-duotone-900.ttf) format("truetype"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-duotone-900.svg#fontawesome) format("svg")
+    src: url(../fonts/fa-duotone-900.eot);
+    src: url(../fonts/fa-duotone-900.eot?#iefix) format("embedded-opentype"),url(../fonts/fa-duotone-900.woff2) format("woff2"),url(../fonts/fa-duotone-900.woff) format("woff"),url(../fonts/fa-duotone-900.ttf) format("truetype"),url(../fonts/fa-duotone-900.svg#fontawesome) format("svg")
 }
 
 .fad {
@@ -27345,8 +27345,8 @@ a.text-gray-dark:focus,a.text-gray-dark:hover {
     font-style: normal;
     font-weight: 300;
     font-display: auto;
-    src: url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-light-300.eot);
-    src: url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-light-300.eot?#iefix) format("embedded-opentype"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-light-300.woff2) format("woff2"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-light-300.woff) format("woff"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-light-300.ttf) format("truetype"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-light-300.svg#fontawesome) format("svg")
+    src: url(../fonts/fa-light-300.eot);
+    src: url(../fonts/fa-light-300.eot?#iefix) format("embedded-opentype"),url(../fonts/fa-light-300.woff2) format("woff2"),url(../fonts/fa-light-300.woff) format("woff"),url(../fonts/fa-light-300.ttf) format("truetype"),url(../fonts/fa-light-300.svg#fontawesome) format("svg")
 }
 
 .fal {
@@ -27358,8 +27358,8 @@ a.text-gray-dark:focus,a.text-gray-dark:hover {
     font-style: normal;
     font-weight: 400;
     font-display: auto;
-    src: url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-regular-400.eot);
-    src: url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-regular-400.eot?#iefix) format("embedded-opentype"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-regular-400.woff2) format("woff2"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-regular-400.woff) format("woff"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-regular-400.ttf) format("truetype"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-regular-400.svg#fontawesome) format("svg")
+    src: url(../fonts/fa-regular-400.eot);
+    src: url(../fonts/fa-regular-400.eot?#iefix) format("embedded-opentype"),url(../fonts/fa-regular-400.woff2) format("woff2"),url(../fonts/fa-regular-400.woff) format("woff"),url(../fonts/fa-regular-400.ttf) format("truetype"),url(../fonts/fa-regular-400.svg#fontawesome) format("svg")
 }
 
 .fal,.far {
@@ -27375,8 +27375,8 @@ a.text-gray-dark:focus,a.text-gray-dark:hover {
     font-style: normal;
     font-weight: 900;
     font-display: auto;
-    src: url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-solid-900.eot);
-    src: url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-solid-900.eot?#iefix) format("embedded-opentype"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-solid-900.woff2) format("woff2"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-solid-900.woff) format("woff"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-solid-900.ttf) format("truetype"),url(https://webtestdemos.com/pmi-porous-materials/assets/fonts/fa-solid-900.svg#fontawesome) format("svg")
+    src: url(../fonts/fa-solid-900.eot);
+    src: url(../fonts/fa-solid-900.eot?#iefix) format("embedded-opentype"),url(../fonts/fa-solid-900.woff2) format("woff2"),url(../fonts/fa-solid-900.woff) format("woff"),url(../fonts/fa-solid-900.ttf) format("truetype"),url(../fonts/fa-solid-900.svg#fontawesome) format("svg")
 }
 
 .fa,.fas {
